--- a/.github/workflows/deploy-docs-to-gh-pages.yml
+++ b/.github/workflows/deploy-docs-to-gh-pages.yml
@@ -4,11 +4,11 @@ on:
   pull_request:
     branches: [dev, main ]
   push:
-    branches: [dev, main ]
+    branches: [docs/removeDeployAction, dev, main ]
 
 jobs:
   checks:
-    if: github.event_name != 'push'
+    if: grm thub.event_name != 'push'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
@@ -34,34 +34,24 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '12.x'
-      - name: Build
-        run: |
-          cd documentation
-          if [ -e yarn.lock ]; then
-          yarn install --frozen-lockfile
-          elif [ -e package-lock.json ]; then
-          npm ci
-          else
-          npm i
-          fi
-          npm run build
       - name: Install rust-docs with nightly toolchain
         uses: actions-rs/toolchain@v1
         with:
-            profile: minimal
-            toolchain: nightly
-            override: true
-            components: rust-docs
+          profile: minimal
+          toolchain: nightly
+          override: true
+          components: rust-docs
       - name: Deploy Rust Docs
         run: |
           sudo apt-get update
           sudo apt-get install libudev-dev libusb-1.0-0-dev
-          DOCFLAGS="--cfg docsrs" cargo +stable doc --all-features --document-private-items --no-deps --release
+          DOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --document-private-items --no-deps --release --target-dir docs/libraries/rust/rust_docs
           mkdir -p ./documentation/build/rust
           cp -r target/doc  ./documentation/build/rust
+
       - name: Release to GitHub Pages
         uses: iotaledger/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./documentation/build
+          publish_dir: ./documentation/build/rust
           cname: wallet-lib.docs.iota.org
