test deploy action

--- a/.github/workflows/deploy-docs-to-gh-pages.yml
+++ b/.github/workflows/deploy-docs-to-gh-pages.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
     branches: [ dev, main ]
   push:
-    branches: [dev, main ]
+    branches: [docs/removeDeployAction, dev, main ]
 
 jobs:
   checks:
